@@ -1,4 +1,7 @@
 2006-02-06 David Brown <dmlb2000@gmail.com>
+	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.15.patch: added
+
+2006-02-06 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.15.3
 	* info/patches/maintenance_patches/patch-2.6.15.3: added
 
